Bug #14575 MySQL server crashes if you try to access to InnoDB table
Submitted: 2 Nov 2005 16:18 Modified: 16 Mar 2006 16:16
Reporter: Victoria Reznichenko
Status: Closed
Category:Server Severity:S2 (Serious)
Version:5.0 OS:Linux (Linux, Windows)
Assigned to: Antony Curtis Target Version:

[2 Nov 2005 16:18] Victoria Reznichenko
Description:
If you run server with --skip-innodb option and try to access to InnoDB table, server
crashes.
I was able reproduce it with 5.0 version, but not with 4.1

Back trace:
(gdb) bt
#0  0xb7c39571 in kill () from /lib/libc.so.6
#1  0xb7d9e2d1 in pthread_kill () from /lib/libpthread.so.0
#2  0xb7d9e69b in raise () from /lib/libpthread.so.0
#3  0xb7c39308 in raise () from /lib/libc.so.6
#4  0xb7c3a790 in abort () from /lib/libc.so.6
#5  0x085c3071 in safe_mutex_lock (mp=0x87fec60, file=0x86711e1 "ha_innodb.cc", line=6654)
at thr_mutex.c:104
#6  0x082d6366 in get_share (table_name=0xbeffb470 "./test/ib") at ha_innodb.cc:6654
#7  0x082cf6e0 in ha_innobase::open (this=0x88644e0, name=0xbeffb470 "./test/ib", mode=2,
test_if_locked=2) at ha_innodb.cc:2360
#8  0x082b9cea in handler::ha_open (this=0x88644e0, name=0xbeffb470 "./test/ib", mode=2,
test_if_locked=2) at handler.cc:1369
#9  0x0822e74e in openfrm (thd=0x8863008, name=0xbeffc6f0 "./test/ib", alias=0x888f750
"ib", db_stat=8231, prgflag=44, ha_open_flags=0,
    outparam=0x884c0c8) at table.cc:912
#10 0x082242f6 in open_unireg_entry (thd=0x8863008, entry=0x884c0c8, db=0x8864ad0 "test",
name=0x888f730 "ib", alias=0x888f750 "ib",
    table_desc=0x888f758, mem_root=0xbefff050) at sql_base.cc:1750
#11 0x08222de1 in open_table (thd=0x8863008, table_list=0x888f758, mem_root=0xbefff050,
refresh=0xbefff07b, flags=0) at sql_base.cc:1296
#12 0x08224c89 in open_tables (thd=0x8863008, start=0xbefff0d4, counter=0xbefff0c4,
flags=0) at sql_base.cc:2018
#13 0x08225505 in open_and_lock_tables (thd=0x8863008, tables=0x888f758) at
sql_base.cc:2314
#14 0x081f6f59 in mysql_execute_command (thd=0x8863008) at sql_parse.cc:2451
#15 0x081ffe16 in mysql_parse (thd=0x8863008, inBuf=0x888f650 "select * from ib",
length=16) at sql_parse.cc:5569
#16 0x081f512a in dispatch_command (command=COM_QUERY, thd=0x8863008, packet=0x88875f1
"select * from ib", packet_length=17) at sql_parse.cc:1697
#17 0x081f4915 in do_command (thd=0x8863008) at sql_parse.cc:1498
#18 0x081f39a5 in handle_one_connection (arg=0x8863008) at sql_parse.cc:1143
#19 0xb7d9af1b in pthread_start_thread () from /lib/libpthread.so.0
#20 0xb7d9af9f in pthread_start_thread_event () from /lib/libpthread.so.0
#21 0xb7cc9fda in clone () from /lib/libc.so.6

How to repeat:
1. start server with --skip-innodb option
2. try to access to InnoDB table (previously created)
[14 Mar 2006 9:57] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3809
[16 Mar 2006 9:15] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3873
[16 Mar 2006 10:27] Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Pushed to 5.0.20 repository
[16 Mar 2006 16:16] Paul DuBois
Noted in 5.0.20 changelog.

Attempting to access an <literal>InnoDB</literal> table after
starting the server with <option>--skip-innodb</option> caused
a server crash. (Bug #14575)