Bug#14575   ¨MySQL server crashes if you try to access to InnoDB table¨   crash caused by schizophrenic mysqld - 2 memory locations for logically same function   with conflicting values.   Fixed by backporting from 5.1 changes to have_xyz_db declarations.